target_sources(ablateLibrary
        PRIVATE
        perfectGas.cpp
        stiffenedGas.cpp
        kthStiffenedGas.cpp
        tChem.cpp
        chemTab.cpp
        chemistryModel.cpp
        twoPhase.cpp
        nPhase.cpp
        tChemSoot.cpp
        tChemBase.cpp
        zerork.cpp

        PUBLIC
        eos.hpp
        perfectGas.hpp
        tChem.hpp
        stiffenedGas.hpp
        kthStiffenedGas.hpp
        chemTab.hpp
        chemistryModel.hpp
        twoPhase.hpp
        nPhase.hpp
        tChemSoot.hpp
        tChemBase.hpp
        zerork.hpp
        )

add_subdirectory(transport)
add_subdirectory(tChem)
add_subdirectory(radiationProperties)
add_subdirectory(tChemSoot)
add_subdirectory(chemTab)
add_subdirectory(zerork)